# fake-dfasat

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
fakedfasat/: apta.py  dfa.py  fakedfasat.py  main.py  sat_encoding.py  solvers.py
src/fakedfasat/: fakedfasat.py  sat_encoding.py
src/fakedfasat_Alichwan/: fakedfasat.py  sat_encoding.py
test/apta/: create_sat_encoding.py  create_tree.py
test/data/: 50S_10L_0C_20T_15X.json  50S_10L_0C_20T_5X.json  50S_5L_0C_10T_10X.json  50S_5L_0C_10T_20X.json  50S_5L_0C_20T_5X.json  50S_5L_0C_5T_10X.json  50S_5L_0C_5T_5X.json
test/endtoend/: test_dfa.py
