[project]
name = "fakedfasat"
version = "0.0.1"
authors = [
  { name="Alex Medina", email="aamedina@uc.cl" },
]
description = "Implementation of DFASAT (Heule & Verwer, 2013) but modified for investigation purposes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
]

[project.urls]
Homepage = "https://github.com/alichwan/fake-dfasat"
Issues = "https://github.com/alichwan/fake-dfasat/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
multi_line_output = 3
line_length = 88
src_paths = ["isort"]
extend_skip = [".md", ".json"]
skip_gitignore = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_sort_within_sections = false
ensure_newline_before_comments = true
lexicographical = true
case_sensitive = true
known_local_folder = ["fakedfasat", "src", "test"]

[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
